diesel_compile_tests/tests/fail/derive/empty_struct.stderr
error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:10:10
   |
LL | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:15:10
   |
LL | #[derive(Identifiable)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Identifiable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:20:10
   |
LL | #[derive(Insertable)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:25:10
   |
LL | #[derive(Queryable)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `Queryable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:29:10
   |
LL | #[derive(QueryableByName)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `QueryableByName` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:33:10
   |
LL | #[derive(Selectable)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Selectable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this derive can only be used on non-unit structs
  --> tests/fail/derive/empty_struct.rs:37:10
   |
LL | #[derive(Associations)]
   |          ^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Associations` (in Nightly builds, run with -Z macro-backtrace for more info)
